--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img src="pic2.jpg" alt="Project 2">
+        <img src="Pic2.jpg" alt="Project 2">
         <div class="info">
           <h3>Chest Board</h3>
           <p></p>
